@@ -26,44 +26,33 @@
  */
 package org.niis.xroad.securityserver.restapi.service;
 
-import ee.ria.xroad.common.CodedException;
-import ee.ria.xroad.common.SystemProperties;
 import ee.ria.xroad.common.identifier.ClientId;
 import ee.ria.xroad.common.identifier.SecurityServerId;
 import ee.ria.xroad.common.identifier.XRoadId;
 
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.niis.xroad.common.CostType;
-import org.niis.xroad.common.core.exception.ErrorDeviation;
 import org.niis.xroad.common.core.exception.XrdRuntimeException;
 import org.niis.xroad.globalconf.GlobalConfProvider;
 import org.niis.xroad.globalconf.model.ApprovedCAInfo;
 import org.niis.xroad.globalconf.model.GlobalGroupInfo;
 import org.niis.xroad.globalconf.model.MemberInfo;
 import org.niis.xroad.globalconf.model.SharedParameters;
-import org.niis.xroad.restapi.exceptions.DeviationAwareRuntimeException;
 import org.niis.xroad.serverconf.model.TimestampingService;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.web.client.RestTemplateBuilder;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
-import org.springframework.web.client.RestClientException;
-import org.springframework.web.client.RestTemplate;
 
 import java.security.cert.X509Certificate;
-import java.time.Duration;
 import java.util.Collection;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.OptionalInt;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import static ee.ria.xroad.common.ErrorCodes.X_OUTDATED_GLOBALCONF;
-import static org.niis.xroad.restapi.exceptions.DeviationCodes.ERROR_GLOBAL_CONF_DOWNLOAD_REQUEST;
+import static org.niis.xroad.common.core.exception.ErrorCode.GLOBAL_CONF_OUTDATED;
 
 /**
  * Global configuration service.
@@ -72,27 +61,11 @@ import static org.niis.xroad.restapi.exceptions.DeviationCodes.ERROR_GLOBAL_CONF
  */
 @Slf4j
 @Service
+@RequiredArgsConstructor
 @PreAuthorize("isAuthenticated()")
 public class GlobalConfService {
-    private static final int CONF_CLIENT_ADMIN_PORT = SystemProperties.getConfigurationClientAdminPort();
-    private static final int REST_TEMPLATE_TIMEOUT_MS = 60000;
-
     private final GlobalConfProvider globalConfProvider;
     private final ServerConfService serverConfService;
-    private final RestTemplate restTemplate;
-    private final String downloadConfigurationAnchorUrl;
-
-    @Autowired
-    public GlobalConfService(GlobalConfProvider globalConfProvider, ServerConfService serverConfService,
-                             @Value("${url.download-configuration-anchor}") String downloadConfigurationAnchorUrl,
-                             RestTemplateBuilder restTemplateBuilder) {
-        this.globalConfProvider = globalConfProvider;
-        this.serverConfService = serverConfService;
-        this.downloadConfigurationAnchorUrl = String.format(downloadConfigurationAnchorUrl, CONF_CLIENT_ADMIN_PORT);
-        this.restTemplate = restTemplateBuilder
-                .readTimeout(Duration.ofMillis(REST_TEMPLATE_TIMEOUT_MS))
-                .build();
-    }
 
     /**
      * @param securityServerId
@@ -101,7 +74,7 @@ public class GlobalConfService {
     public boolean securityServerExists(SecurityServerId securityServerId) {
         if (!globalConfProvider.getInstanceIdentifiers().contains(securityServerId.getXRoadInstance())) {
             // unless we check instance existence like this, we will receive
-            // CodedException: InternalError: Invalid instance identifier: x -exception
+            // XrdRuntimeException: InternalError: Invalid instance identifier: x -exception
             // which is hard to turn correctly into http 404 instead of 500
             return false;
         }
@@ -118,7 +91,7 @@ public class GlobalConfService {
                 .map(GlobalGroupInfo::id)
                 .map(XRoadId.class::cast)
                 .collect(Collectors.toSet());
-        return existingIdentifiers.containsAll(identifiers);
+        return new HashSet<>(existingIdentifiers).containsAll(identifiers);
     }
 
     /**
@@ -131,7 +104,7 @@ public class GlobalConfService {
                 .map(MemberInfo::id)
                 .map(XRoadId.class::cast)
                 .collect(Collectors.toSet());
-        return existingIdentifiers.containsAll(identifiers);
+        return new HashSet<>(existingIdentifiers).containsAll(identifiers);
     }
 
     /**
@@ -153,7 +126,7 @@ public class GlobalConfService {
     public void verifyGlobalConfValidity() throws GlobalConfOutdatedException {
         try {
             globalConfProvider.verifyValidity();
-        } catch (CodedException e) {
+        } catch (XrdRuntimeException e) {
             if (isCausedByOutdatedGlobalconf(e)) {
                 throw new GlobalConfOutdatedException(e);
             } else {
@@ -164,8 +137,8 @@ public class GlobalConfService {
         }
     }
 
-    static boolean isCausedByOutdatedGlobalconf(CodedException e) {
-        return X_OUTDATED_GLOBALCONF.equals(e.getFaultCode());
+    static boolean isCausedByOutdatedGlobalconf(XrdRuntimeException e) {
+        return GLOBAL_CONF_OUTDATED.code().equals(e.getErrorCode());
     }
 
     /**
@@ -202,7 +175,7 @@ public class GlobalConfService {
                 globalConfProvider.getApprovedTsps(globalConfProvider.getInstanceIdentifier());
         return approvedTspTypes.stream()
                 .map(this::createTspType)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -222,25 +195,6 @@ public class GlobalConfService {
     public boolean isSecurityServerClientForThisInstance(ClientId client) {
         return globalConfProvider.isSecurityServerClient(client,
                 serverConfService.getSecurityServerId());
-    }
-
-    /**
-     * Sends an http request to configuration-client in order to trigger the downloading of the global conf
-     *
-     * @throws ConfigurationDownloadException if the request succeeds but configuration-client returns an error
-     * @throws DeviationAwareRuntimeException if the request fails
-     */
-    public void executeDownloadConfigurationFromAnchor() throws ConfigurationDownloadException {
-        log.info("Starting to download GlobalConf");
-        ResponseEntity<String> response;
-        try {
-            response = restTemplate.getForEntity(downloadConfigurationAnchorUrl, String.class);
-        } catch (RestClientException e) {
-            throw new DeviationAwareRuntimeException(e, new ErrorDeviation(ERROR_GLOBAL_CONF_DOWNLOAD_REQUEST));
-        }
-        if (response.getStatusCode() != HttpStatus.OK) {
-            throw new ConfigurationDownloadException(response.getBody());
-        }
     }
 
     /**
